[package]
name = "board-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
bevy-inspector-egui = {version = "0.23.4", optional = true}
colored = {version = "2.1.0", optional = true}
rand = "0.8.5"
serde = "1.0.197"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
